--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "gulpfile.js",
   "directories": {},
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "bemto.pug": "^2.1.0",
+    "object-fit-images": "^3.2.3",
+    "rupture": "^0.6.2",
+    "svg4everybody": "^2.1.8"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
