--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jquery-ui": "^1.12.1",
     "object-fit-images": "^3.2.3",
     "rupture": "^0.6.2",
-    "svg4everybody": "^2.1.8"
+    "svg4everybody": "^2.1.8",
+    "swiper": "^3.4.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
