--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery-ui": "^1.12.1",
     "object-fit-images": "^3.2.3",
     "rupture": "^0.6.2",
+    "sticky-kit": "^1.1.3",
     "svg4everybody": "^2.1.8",
     "swiper": "^3.4.2"
   },
