--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "rupture": "^0.6.2",
     "sticky-kit": "^1.1.3",
     "svg4everybody": "^2.1.8",
-    "swiper": "^3.4.2"
+    "swiper": "^3.4.2",
+    "tars-cli": "^1.9.5"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
