--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-es2015": "^6.24.1",
     "bemto.pug": "^2.1.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-jsbeautifier": "^2.1.1",
     "jquery-ui": "^1.12.1",
     "object-fit-images": "^3.2.3",
     "rupture": "^0.6.2",
