--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "bemto.pug": "^2.1.0",
+    "gsap": "^1.20.3",
     "gulp-gh-pages": "^0.5.4",
     "gulp-jsbeautifier": "^2.1.1",
     "jquery-ui": "^1.12.1",
