--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "gulp": "^3.9.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tars dev --lr",
+    "build": "tars build --release"
   },
   "author": "",
   "license": "ISC"
